--- a/Mobile Testing/Mobile Testing/Base.lproj/Main.storyboard
+++ b/Mobile Testing/Mobile Testing/Base.lproj/Main.storyboard
@@ -22,15 +22,19 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
+                    <connections>
+                        <segue destination="WQY-lW-Abq" kind="custom" identifier="sw_front" customClass="SWRevealViewControllerSegueSetController" id="dat-So-ytG"/>
+                        <segue destination="3rT-Z2-fPc" kind="custom" identifier="sw_rear" customClass="SWRevealViewControllerSegueSetController" id="av4-IR-o6P"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-617" y="80"/>
+            <point key="canvasLocation" x="-1241" y="-4"/>
         </scene>
-        <!--View Controller-->
+        <!--QuizVC-->
         <scene sceneID="z3m-Cf-qxa">
             <objects>
-                <viewController id="WQY-lW-Abq" sceneMemberID="viewController">
+                <viewController id="WQY-lW-Abq" customClass="QuizVC" customModule="Mobile_Testing" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="yRB-os-oVv"/>
                         <viewControllerLayoutGuide type="bottom" id="8m0-CJ-Ytq"/>
@@ -38,12 +42,53 @@
                     <view key="view" contentMode="scaleToFill" id="n9g-oo-YmL">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="80w-Te-QXH">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GTD-Fl-NE2">
+                                        <rect key="frame" x="5" y="42" width="20" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="20" id="mbg-rV-grP"/>
+                                            <constraint firstAttribute="height" constant="20" id="wox-nl-eLC"/>
+                                        </constraints>
+                                        <state key="normal" image="smackBurger copy"/>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Test Your Skills!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9pC-Tg-M4m">
+                                        <rect key="frame" x="94.5" y="38" width="186" height="32"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="32" id="HO5-Sy-0v0"/>
+                                            <constraint firstAttribute="width" constant="186" id="xnr-Fb-Odq"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="23"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.2901960784" green="0.30196078430000001" blue="0.84705882349999995" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="GTD-Fl-NE2" firstAttribute="leading" secondItem="80w-Te-QXH" secondAttribute="leading" constant="5" id="7rb-w9-W59"/>
+                                    <constraint firstAttribute="bottom" secondItem="9pC-Tg-M4m" secondAttribute="bottom" id="ScM-Xk-yx0"/>
+                                    <constraint firstAttribute="bottom" secondItem="GTD-Fl-NE2" secondAttribute="bottom" constant="8" id="XEC-iy-Mdi"/>
+                                    <constraint firstAttribute="height" constant="70" id="YI2-ro-N0K"/>
+                                    <constraint firstItem="9pC-Tg-M4m" firstAttribute="centerX" secondItem="80w-Te-QXH" secondAttribute="centerX" id="b64-8c-KJx"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="80w-Te-QXH" firstAttribute="top" secondItem="n9g-oo-YmL" secondAttribute="top" id="COD-8X-L9h"/>
+                            <constraint firstItem="80w-Te-QXH" firstAttribute="leading" secondItem="n9g-oo-YmL" secondAttribute="leading" id="ZZu-6E-0S5"/>
+                            <constraint firstAttribute="trailing" secondItem="80w-Te-QXH" secondAttribute="trailing" id="bHS-4v-8Ac"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="menuButton" destination="GTD-Fl-NE2" id="4m1-mU-dZM"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9EH-wi-sk1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="233" y="-152"/>
+            <point key="canvasLocation" x="-178.40000000000001" y="-300"/>
         </scene>
         <!--LoginVC-->
         <scene sceneID="E3l-vr-N3z">
@@ -53,7 +98,7 @@
                         <viewControllerLayoutGuide type="top" id="yqQ-tA-XvO"/>
                         <viewControllerLayoutGuide type="bottom" id="DX4-rz-gp0"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="NKQ-NG-Er1">
+                    <view key="view" contentMode="scaleToFill" id="NKQ-NG-Er1" customClass="GradientView" customModule="Mobile_Testing" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -61,7 +106,10 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sT6-Cp-sYp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="233" y="582"/>
+            <point key="canvasLocation" x="-178" y="550"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="smackBurger copy" width="40" height="40"/>
+    </resources>
 </document>
