--- a/Mobile Testing/Mobile Testing/Base.lproj/Main.storyboard
+++ b/Mobile Testing/Mobile Testing/Base.lproj/Main.storyboard
@@ -65,7 +65,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" red="0.2901960784" green="0.30196078430000001" blue="0.84705882349999995" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.96470588239999999" green="0.65098039220000004" blue="0.13725490200000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstItem="GTD-Fl-NE2" firstAttribute="leading" secondItem="80w-Te-QXH" secondAttribute="leading" constant="5" id="7rb-w9-W59"/>
                                     <constraint firstAttribute="bottom" secondItem="9pC-Tg-M4m" secondAttribute="bottom" id="ScM-Xk-yx0"/>
@@ -90,10 +90,10 @@
             </objects>
             <point key="canvasLocation" x="-178.40000000000001" y="-300"/>
         </scene>
-        <!--LoginVC-->
+        <!--Left Menu-->
         <scene sceneID="E3l-vr-N3z">
             <objects>
-                <viewController id="3rT-Z2-fPc" customClass="LoginVC" customModule="Mobile_Testing" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="3rT-Z2-fPc" customClass="LeftMenu" customModule="Mobile_Testing" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="yqQ-tA-XvO"/>
                         <viewControllerLayoutGuide type="bottom" id="DX4-rz-gp0"/>
@@ -101,15 +101,87 @@
                     <view key="view" contentMode="scaleToFill" id="NKQ-NG-Er1" customClass="GradientView" customModule="Mobile_Testing" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="a50-vT-f9P">
+                                <rect key="frame" x="0.0" y="75" width="375" height="500"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="500" id="Mzk-fW-Rri"/>
+                                </constraints>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationLevel="2" indentationWidth="10" reuseIdentifier="CustomCell" rowHeight="65" id="IHZ-3A-hxj" customClass="CustomCell" customModule="Mobile_Testing" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="65"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="IHZ-3A-hxj" id="mWP-s4-VtD">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="65"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GEz-e6-8tc">
+                                                    <rect key="frame" x="20" y="21" width="43" height="24"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="24" id="3Zz-JU-P32"/>
+                                                        <constraint firstAttribute="width" constant="43" id="Zhj-WI-zXt"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="java" translatesAutoresizingMaskIntoConstraints="NO" id="qz4-Lh-qif">
+                                                    <rect key="frame" x="128" y="16" width="50" height="40"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="28" id="03m-ah-XkO"/>
+                                                        <constraint firstAttribute="width" constant="90" id="qDJ-q8-6Z7"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstItem="GEz-e6-8tc" firstAttribute="centerY" secondItem="mWP-s4-VtD" secondAttribute="centerY" id="QFN-ax-t28"/>
+                                                <constraint firstItem="qz4-Lh-qif" firstAttribute="leading" secondItem="GEz-e6-8tc" secondAttribute="trailing" constant="60" id="d8M-A8-KIw"/>
+                                                <constraint firstItem="qz4-Lh-qif" firstAttribute="centerY" secondItem="mWP-s4-VtD" secondAttribute="centerY" id="hNc-5F-0mZ"/>
+                                                <constraint firstItem="GEz-e6-8tc" firstAttribute="leading" secondItem="mWP-s4-VtD" secondAttribute="leading" constant="20" id="xy5-LS-wck"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <connections>
+                                            <outlet property="cellImage" destination="qz4-Lh-qif" id="Ot4-oE-Ym1"/>
+                                            <outlet property="cellTitle" destination="GEz-e6-8tc" id="hTS-jq-FWB"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hey There!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LAs-o7-38g">
+                                <rect key="frame" x="20" y="30" width="90" height="25"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="90" id="4t3-gk-IGa"/>
+                                    <constraint firstAttribute="height" constant="25" id="7Lo-cy-iWh"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="18"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="LAs-o7-38g" firstAttribute="leading" secondItem="NKQ-NG-Er1" secondAttribute="leading" constant="20" id="GnT-ZY-cvq"/>
+                            <constraint firstAttribute="trailing" secondItem="a50-vT-f9P" secondAttribute="trailing" id="MoJ-6g-Whp"/>
+                            <constraint firstItem="a50-vT-f9P" firstAttribute="leading" secondItem="NKQ-NG-Er1" secondAttribute="leading" id="N3a-Hg-JFE"/>
+                            <constraint firstItem="a50-vT-f9P" firstAttribute="centerX" secondItem="NKQ-NG-Er1" secondAttribute="centerX" id="Q57-ur-G1v"/>
+                            <constraint firstItem="LAs-o7-38g" firstAttribute="top" secondItem="yqQ-tA-XvO" secondAttribute="bottom" constant="10" id="a4R-bm-QrB"/>
+                            <constraint firstItem="a50-vT-f9P" firstAttribute="top" secondItem="LAs-o7-38g" secondAttribute="bottom" constant="20" id="fyx-MS-bsN"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="leftMenuTable" destination="a50-vT-f9P" id="khd-hF-CrN"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sT6-Cp-sYp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-178" y="550"/>
+            <point key="canvasLocation" x="-178.40000000000001" y="549.17541229385313"/>
         </scene>
     </scenes>
     <resources>
+        <image name="java" width="3000" height="2121"/>
         <image name="smackBurger copy" width="40" height="40"/>
     </resources>
 </document>
