--- a/Mobile Testing/Mobile Testing/Base.lproj/Main.storyboard
+++ b/Mobile Testing/Mobile Testing/Base.lproj/Main.storyboard
@@ -116,11 +116,11 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="65"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GEz-e6-8tc">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GEz-e6-8tc">
                                                     <rect key="frame" x="20" y="21" width="43" height="24"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="24" id="3Zz-JU-P32"/>
-                                                        <constraint firstAttribute="width" constant="43" id="Zhj-WI-zXt"/>
+                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="43" id="Zhj-WI-zXt"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                                     <nil key="textColor"/>
